--- a/a_coding/a_prototype_01/html/main_page.html
+++ b/a_coding/a_prototype_01/html/main_page.html
@@ -28,13 +28,13 @@
       </header><!-- #headBox -->
       <section id="mainAdBox">
         <h2 class="blind">mainAdBox</h2>
-        <div class="move_button_box">
+        <div class="indicator_box">
           <ul class="clearfix">
-            <li class="move_button_01"></li>
-            <li class="move_button_02"></li>
-            <li class="move_button_03"></li>
-            <li class="move_button_04"></li>
-            <li class="move_button_05"></li>
+            <li class="indicator_01"></li>
+            <li class="indicator_02"></li>
+            <li class="indicator_03"></li>
+            <li class="indicator_04"></li>
+            <li class="indicator_05"></li>
           </ul>
         </div>
       </section><!-- #mainAdBox -->
