--- a/a_coding/a_prototype_01_test/html/brandstory_page.html
+++ b/a_coding/a_prototype_01_test/html/brandstory_page.html
@@ -45,16 +45,16 @@
                 <span>login</span>
                 <i class="far fa-user-circle"></i>
               </button>
-              <!-- 로그인박스 제작중 -->
-              <div class="none login_actionBox">로그인박스</div>
             </div>
           </div>
         </div><!-- .head_area -->
         <div class="navigation_slider"><!-- 메뉴박스 제작중 -->
           <div class="loginAndJoin_box">
-            <div><button class="close_btn"type="button">
+            <div>
+              <button class="close_btn"type="button">
               <i class="fas fa-times"></i>
-            </button></div>
+              </button>
+            </div>
             <div>
               <button class="sliderArea_login" type="button">로그인</button>
             </div>
@@ -64,50 +64,106 @@
           </div>
           <div class="category_box">
             <dl>
-              <dt>category</dt>
+              <dt class="category_dt_title">category</dt>
               <dd>
                 <a href="#">brand story</a>
+                <div class="none sub_categoryBox">
+                  <ul>
+                    <li><a href="#">회사 소개</a></li>
+                    <li><a href="#">브랜드 소개</a></li>
+                    <li><a href="#">비전</a></li>
+                    <li><a href="#">bi</a></li>
+                    <li><a href="#">오시는 길</a></li>
+                  </ul>
+                </div>
               </dd>
               <dd>
                 <a href="#">menu</a>
+                <div class="none sub_categoryBox">
+                  <ul>
+                    <li><a href="#">new &amp; best</a></li>
+                    <li><a href="#">coffee</a></li>
+                    <li><a href="#">beverage</a></li>
+                    <li><a href="#">tea</a></li>
+                    <li><a href="#">juice &amp; ade</a></li>
+                    <li><a href="#">smoothie &amp; frappe</a></li>
+                    <li><a href="#">dessert</a></li>
+                  </ul>
+                </div>
               </dd>
               <dd>
                 <a href="#">franchise</a>
+                <div class="none sub_categoryBox">
+                  <ul>
+                    <li><a href="#">개설비용</a></li>
+                    <li><a href="#">인테리어</a></li>
+                    <li><a href="#">faq</a></li>
+                    <li><a href="#">가맹문의</a></li>
+                    <li><a href="#">개설절차</a></li>
+                  </ul>
+                </div>
               </dd>
               <dd>
                 <a href="#">store</a>
+                <div class="none sub_categoryBox">
+                  <ul>
+                    <li><a href="#">매장 찾기</a></li>
+                    <li><a href="#">우수가맹점</a></li>
+                  </ul>
+                </div>
               </dd>
               <dd>
                 <a href="#">news</a>
+                <div class="none sub_categoryBox">
+                  <ul>
+                    <li><a href="#">언론보도</a></li>
+                    <li><a href="#">공지사항</a></li>
+                  </ul>
+                </div>
               </dd>
             </dl>
           </div>
           <div class="appDownload_box">
             <dl>
-              <dt>mega coffee app</dt>
+              <dt class="appDownload_dt_title">app</dt>
               <dd>
-                <a href="#">ios</a>
-              </dd>
-              <dd>
-                <a href="#">android</a>
+                <div class="downloadBox_title">
+                  <span>메가커피 멤버쉽 App 다운로드</span>
+                </div>
+                <div class="downloadBox_link">
+                  <div class="android_link">
+                    <span>Android</span>
+                    <a href="https://play.google.com/store/apps/details?id=co.kr.waldlust.megacoffee"></a>
+                  </div>
+                  <div class="ios_link">
+                    <span>iOS</span>
+                    <a href="https://apps.apple.com/kr/app/%EB%A9%94%EA%B0%80%EC%BB%A4%ED%94%BC/id1473428031"></a>
+                  </div>
+                </div>
               </dd>
             </dl>
           </div>
           <div class="sns_box">
             <dl>
-              <dt>sns</dt>
-              <dd>
-                <a href="#"></a>
-              </dd>
-              <dd>
-                <a href="#"></a>
-              </dd>
-              <dd>
-                <a href="#"></a>
+              <dt class="sns_dt_title">sns</dt>
+              <dd class="clearfix">
+                <div>
+                  <a href="#"></a>
+                </div>
+                <div>
+                  <a href="#"></a>
+                </div>
+                <div>
+                  <a href="#"></a>
+                </div>
               </dd>
             </dl>
           </div>
-        </div>
+        </div> 
+
+        <!-- 로그인박스 제작중 -->
+        <div class="login_actionBox">로그인박스</div>
+
         <div class="navigation_area">
           <h2 class="blind">navigationArea</h2>
           <div class="navigation_bar">
