prototype_subpage_map
kakao map script add

--- a/a_coding/a_prototype_01_test/html/brandstory_page.html
+++ b/a_coding/a_prototype_01_test/html/brandstory_page.html
@@ -137,7 +137,7 @@
               </dt>
               <dd>
                 <div class="directions_con">
-                  <div>지도 위치</div>
+                  <div id="map"></div>
                   <div></div>
                 </div>
               </dd>
@@ -152,5 +152,7 @@
     <!-- script -->
     <script src="../js/src/header_footer_area.js"></script>
     <script src="../js/src/header_navBar_btn.js"></script>
+    <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=7f6832fab70935802a3b585b7eb8df33"></script>
+    <script src="../js/src/kakaoMap.js"></script>
   </body>
 </html>
